# jacobian-search

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY_METADATA.md  plane_jacobian_search.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  research-proposal.yml
.github/workflows/: ci.yml
docs/: FINDINGS.md
tests/: test_exact.py
