[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jacobian-search"
version = "0.1.0"
description = "Reproducible symbolic and finite-field experiments around the plane Jacobian conjecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Neil Fox Agency"}
]
dependencies = [
  "sympy>=1.13,<2"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9"
]

[tool.setuptools]
py-modules = ["plane_jacobian_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
